--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
 
     <div class="half-width">
-        <img src="image 11.png" alt="">
+        <img src="Images/image 11.png" alt="">
     </div>
 
     </section>  
@@ -39,7 +39,7 @@
          <a class="link-button" target="_blank" href="https://www.linkedin.com/in/antar-hossain-4544ab1b3/">Download My Resume</a>
         </div>
         <div class="middle-half-width">
-            <img src="image 9.png" alt="">
+            <img src="Images/image 9.png" alt="">
         </div>
     </section>  
     
