--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="half-width">
         <h1>Welcome To</h1>
     <h2><span class="Name-highlight"> Antar</span> World </h2>
-    <h3>World Class Loser</h3>
+    <h3>About Me</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
         Illo atque asperiores laudantium, tempore eveniet voluptatem excepturi?
          Molestias, quasi corporis expedita velit, vel molestiae nobis adipisci 
@@ -31,12 +31,12 @@
     </section>  
     <section class="middle-banner">
         <div class="middle-half-width">
-            <h3>World Class Loser</h3>
+            <h3>Career Objective</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
         Illo atque asperiores laudantium, tempore eveniet voluptatem excepturi?
          Molestias, quasi corporis expedita velit, vel molestiae nobis adipisci 
          quia incidunt porro, pariatur in.</p>
-         <a class="link-button" target="_blank" href="https://www.linkedin.com/in/antar-hossain-4544ab1b3/">Download My Resume</a>
+         <a class="link-button" target="_blank" href="https://drive.google.com/file/d/1FyQ3G6Z8TGYDQ_JZftw6BUqdtkYwajEj/view?usp=sharing">Download My Resume</a>
         </div>
         <div class="middle-half-width">
             <img src="images/mee.png" alt="">
